--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/font-awesome/css/font-awesome.css" ,
               "src/styles.scss"
-            ],
+                       ],
             "scripts": []
           },
           "configurations": {
