--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/font-awesome/css/font-awesome.css" ,
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.css" 
                        ],
             "scripts": []
           },
